-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.6
-
Component/s: 3rd-party Modules, Networking
-
Labels:None
-
Environment:
Virtual PC 2004 SP1 (5.3.582.27) + dc21x4.sys v5.5.4
(Noticed while testing CORE-13418.)
Virtual PC 2004 SP1 (5.3.582.27) + dc21x4.sys v5.5.4 + bootcd-75044-dbg.iso
0. Use Virtual PC 2004 SP1 (5.3.582.27).
1. Install ROS.
2. Install dc21x4.sys v5.5.4. (See CORE-8724)
3. Execute "ping/telnet/tracert someUrl" command.
3r. Fails with an error dialog. (Default or Debug mode)
In debug mode, debug log has more details:
(example with ping)
Unhandled exception
|
ExceptionCode: c0000094
|
CS:EIP 1b:7c34b472
|
DS 23 ES 23 FS 3b GS 0
|
EAX: 00000001 EBX: 00236650 ECX: 00000000
|
EDX: 00000000 EBP: 0022e438 ESI: 5942c1b7 ESP: 0022e3e8
|
EDI: 002368a0 EFLAGS: 00010246
|
Address:
|
* <dnsapi.dll:b472 (sdk/lib/3rdparty/adns/src/transmit.c:266 (adns__query_send))> (C:\ReactOS\System32\dnsapi.dll@7c340000)
|
Frames:
|
* <dnsapi.dll:8fdb (sdk/lib/3rdparty/adns/src/query.c:109 (query_submit))> (C:\ReactOS\System32\dnsapi.dll@7c340000)
|
* <dnsapi.dll:9146 (sdk/lib/3rdparty/adns/src/query.c:149 (query_simple))> (C:\ReactOS\System32\dnsapi.dll@7c340000)
|
* <dnsapi.dll:9458 (sdk/lib/3rdparty/adns/src/query.c:255 (adns_submit))> (C:\ReactOS\System32\dnsapi.dll@7c340000)
|
* <dnsapi.dll:9560 (sdk/lib/3rdparty/adns/src/query.c:322 (adns_synchronous))> (C:\ReactOS\System32\dnsapi.dll@7c340000)
|
* <dnsapi.dll:3288 (dll/win32/dnsapi/dnsapi/query.c:822 (DnsQuery_W))> (C:\ReactOS\System32\dnsapi.dll@7c340000)
|
* <mswsock.dll:24fe (dll/win32/mswsock/nsplookup.c:497 (NSP_GetHostByNameHeapAllocW))> (C:\ReactOS\system32\mswsock.dll@79e50000)
|
* <mswsock.dll:3246 (dll/win32/mswsock/nsplookup.c:905 (NSP_LookupServiceNextW))> (C:\ReactOS\system32\mswsock.dll@79e50000)
|
* <mswsock.dll:3584 (dll/win32/mswsock/nsplookup.c:314 (mwsNSPLookupServiceNext))> (C:\ReactOS\system32\mswsock.dll@79e50000)
|
* <ws2_32.dll:8840 (dll/win32/ws2_32/src/nsprovid.c:247 (WsNpLookupServiceNext))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ws2_32.dll:8877 (dll/win32/ws2_32/src/nsprovid.c:207 (WsNqProvLookupServiceNext))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ws2_32.dll:8dff (dll/win32/ws2_32/src/nsquery.c:256 (WsNqLookupServiceNext))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ws2_32.dll:b071 (dll/win32/ws2_32/src/rnr.c:427 (WSALookupServiceNextW))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ws2_32.dll:b20d (dll/win32/ws2_32/src/rnr.c:495 (WSALookupServiceNextA))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ws2_32.dll:67af (dll/win32/ws2_32/src/getxbyxx.c:142 (getxyDataEnt))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ws2_32.dll:6ca5 (dll/win32/ws2_32/src/getxbyxx.c:256 (gethostbyname))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ws2_32.dll:226a (dll/win32/ws2_32/src/addrinfo.c:262 (GetAddrInfoW))> (C:\ReactOS\system32\ws2_32.dll@7c280000)
|
* <ping.exe:1b7d (base/applications/network/ping/ping.c:391 (wmain))> (C:\ReactOS\System32\ping.exe@400000)
|
* <ping.exe:3365 (sdk/lib/crt/startup/crtexe.c:308 (__tmainCRTStartup))> (C:\ReactOS\System32\ping.exe@400000)
|
* <ping.exe:33c7 (sdk/lib/crt/startup/crtexe.c:202 (wmainCRTStartup))> (C:\ReactOS\System32\ping.exe@400000)
|
* <kernel32.dll:108d7 (dll/win32/kernel32/client/proc.c:478 (BaseProcessStartup))> (C:\ReactOS\system32\kernel32.dll@7cc70000)
|
NB:
Without the network driver, these commands just fail to resolve the url, as expected.
–
Same with bootcdregtest-75044.iso, iirc.
- is duplicated by
-
CORE-13418 [VirtualPC 2004 + dc21x4.sys] Firefox 3.0.11: crashes when trying to load its start page
-
- Resolved
-