[ADNS] Add function to return number of DNS servers available for query. [DNSAPI] Use newly added function to return without search if no DNS servers are available. CORE-13441 #resolve

svn path=/trunk/; revision=75339